# 22-avionics-vnav-calc

./: CMakeLists.txt  README.md
examples/: demo_vnav.py  test_star_constraints.py
include/vnav/: arinc424.h  great_circle.h  isa.h  lnav.h  trajectory_solver.h  vnav.h
python/: bindings.cpp
src/: arinc424.cpp  lnav.cpp  trajectory_solver.cpp  vnav.cpp
tests/: CMakeLists.txt  test_vnav.cpp
